references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/RedefinitionDiamond1_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:6b78edab84286008a4358dc96c2d85403e793f7e48181885b64575bbff4aed49
size 1164
